<resources>
    <string name="app_name">Ersa Dashboard</string>
    <string name="qtyTemperature">T</string>
    <string name="qtyRelativeHumidity">RH</string>
    <string name="qtyDewpoint">Tdp</string>
    <string name="degC">&#x2103;</string>
    <string name="percent">%</string>
    <string name="action_chart">Chart</string>
    <string name="action_time_range">Range</string>
    <string name="action_today">24h</string>
    <string name="begin_date">Begin date</string>
    <string name="begin_time">Begin time</string>
    <string name="end_date">End date</string>
    <string name="end_time">End time</string>
    <string name="chart_activity_title">Ersa Chart</string>
    <string name="select_origin">Select Origin</string>
    <string name="mold_risk">Mold risk: </string>
    <string name="days_to_mold">Days to mold: %1$d</string>
    <string name="good">Good</string>
    <string name="ok">OK</string>
    <string name="risk">Risk!</string>
</resources>


