<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:gauge="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/dashboard_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context="eu.sergehelfrich.ersaandroid.DashboardFragment">

            <TextView
                android:id="@+id/tvOrigin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="center"
                android:textStyle="bold"
                tools:text="111" />

            <TextView
                android:id="@+id/tvDateTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="center"
                tools:text="2018-01-01 00:00:00" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="2">

                <de.nitri.gauge.Gauge
                    android:id="@+id/gaugeTemperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:minHeight="180dp"
                    gauge:initialValue="0"
                    gauge:lowerText="@string/degC"
                    gauge:maxValue="60"
                    gauge:minValue="-20"
                    gauge:needleColor="@color/colorTemperature"
                    gauge:totalNicks="100"
                    gauge:upperText="@string/qtyTemperature"
                    gauge:valuePerNick="1" />

                <de.nitri.gauge.Gauge
                    android:id="@+id/gaugeHumidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:minHeight="180dp"
                    gauge:initialValue="0"
                    gauge:lowerText="@string/percent"
                    gauge:maxValue="100"
                    gauge:minValue="0"
                    gauge:needleColor="@color/colorHumidity"
                    gauge:totalNicks="120"
                    gauge:upperText="@string/qtyRelativeHumidity"
                    gauge:valuePerNick="1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="2">

                <de.nitri.gauge.Gauge
                    android:id="@+id/gaugeDewPoint"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:minHeight="180dp"
                    gauge:initialValue="0"
                    gauge:lowerText="@string/degC"
                    gauge:maxValue="60"
                    gauge:minValue="-20"
                    gauge:needleColor="@color/colorDewPoint"
                    gauge:totalNicks="100"
                    gauge:upperText="@string/qtyDewpoint"
                    gauge:valuePerNick="1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mold_risk" />
                <TextView
                    android:id="@+id/tvMoldRisk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:textColor="@color/colorRisk"
                    tools:text="RISK" />

            </LinearLayout>

            <TextView
                android:id="@+id/tvDaysToMold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/days_to_mold"
                />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
